examples/test/testpolicy3895.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3895
  namespace: namespace267
spec:
  podSelector:
    matchLabels:
      key26: value20
      key6: value19
      key15: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value31
      podSelector:
        matchLabels:
          key43: value3
          key0: value19
          key6: value11
